--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -59,6 +59,10 @@ input {
   font-size: 18px;
 }
 
+a {
+  text-decoration: none;
+}
+
 button {
   font-size: 18px;
 }
@@ -69,7 +73,7 @@ button {
   position: relative;
 }
 
-.dropdown-content {
+.BBdropdown-content {
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   display: none;
@@ -79,6 +83,61 @@ button {
   z-index: 1;
 }
 
-.BBCodeDropdown:hover .dropdown-content {
+.BBCodeDropdown:hover .BBdropdown-content {
   display: block;
+}
+
+* Dropdown Button */
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    color: white;
+    display: inline-block;
+    font-family: 'VT323', monospace;
+    font-size: 28px;
+    margin: 15px;
+    text-decoration: none;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    max-height:500px;
+    overflow:auto;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+/*.dropdown:hover .dropdown-content {display: block;}*/
+
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {text-shadow: 2px 2px 8px #FF0000;}
+
+.show {
+  display:block;
+}
+
+#userMentioned {
+  font-weight: bold;
+  font-style: italic;
 }
