--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -87,42 +87,45 @@ button {
   display: block;
 }
 
-/**/Dropdown Button
 .dropdown {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 
 .dropbtn {
-    color: white;
-    display: inline-block;
-    font-family: 'VT323', monospace;
-    font-size: 28px;
-    margin: 15px;
-    text-decoration: none;
+  color: white;
+  display: inline-block;
+  font-family: 'VT323', monospace;
+  font-size: 28px;
+  margin: 15px;
+  text-decoration: none;
 }
 
 .dropdown-content {
-    background-color: #f1f1f1;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    display: none;
-    max-height:500px;
-    min-width: 300px;
-    overflow:auto;
-    position: absolute;
-    z-index: 1;
+  background-color: #f1f1f1;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  display: none;
+  max-height:500px;
+  min-width: 300px;
+  overflow:auto;
+  position: absolute;
+  z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
-    display: block;
-    padding: 12px 16px;
-    text-decoration: none;
+  color: black;
+  display: block;
+  padding: 12px 16px;
+  text-decoration: none;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
-.dropdown:hover .dropbtn {text-shadow: 2px 2px 8px #FF0000;}
+.dropdown:hover .dropbtn {
+  text-shadow: 2px 2px 8px #FF0000;
+}
 
 .show {
   display:block;
